--- a/K_Bridge/Views/Home/PostList.cshtml
+++ b/K_Bridge/Views/Home/PostList.cshtml
@@ -4,11 +4,11 @@
     <link href="/css/Newest.css" rel="stylesheet" />
 }
 <div class="row mb-3 d-flex justify-content-between">
-    <div class="col-9  fw-bold fs-4 text-uppercase">
+    <div class="col-7  fw-bold fs-4 text-uppercase">
         @ViewBag.TopicName
     </div>
-    <button id="filterButton" class="col-3 filter-forum d-flex justify-content-center align-items-center mx-2">
-        <div class="px-2">
+    <button id="filterButton" class="col-3 filter-forum d-flex  justify-content-center align-items-center mx-2" style="min-width:100px;">
+        <div class="px-2 text-nowrap">
             Bộ lọc
         </div>
         <img src="/img/icon_filter_sort_50.png" alt="Filter" width="20" height="20">
@@ -93,14 +93,14 @@
     @foreach (var post in ViewBag.Posts)
     {
         <div class="row mt-2" onclick="window.location.href='/Post/Details?post=@post.ID'">
-            <div class="col-2 d-flex flex-column justify-content-center">
-                <div class="newest-card-stat py-2">@(post.Replies?.Count ?? 0) Câu trả lời</div>
-                <div class="newest-card-stat py-2">@post.ViewCount Lượt xem</div>
+            <div class="col-md-2 col-3 d-none d-sm-block flex-column justify-content-center">
+                <div class="newest-card-stat py-2 text-nowrap fs-14">@(post.Replies?.Count ?? 0) Câu trả lời</div>
+                <div class="newest-card-stat py-2 text-nowrap fs-14">@post.ViewCount Lượt xem</div>
             </div>
-            <div class="col-10">
+            <div class="col-md-10 col-9">
                 <div class="d-flex">
                     <div class="newest-card-title">@post.Title</div>
-                    <div class="newest-card-tag px-3 mx-3"
+                    <div class="newest-card-tag px-3 mx-3 fs-14"
                          style="background: @GetForumColorHelper.GetForumBackgroundColor(post.Topic.Forum.ID);
                                         color:@GetForumColorHelper.GetForumColor(post.Topic.Forum.ID)">
                         @post.Topic.Forum.TagName
@@ -113,10 +113,10 @@
                 </div>
                 <div class="d-flex justify-content-end mt-2">
                     <img src="/img/avatar_default.png" class="rounded-circle" alt="Avatar" width="30" height="30">
-                    <div class="newest-card-username mx-2">@post.User.Username hỏi @GetTimeAgoHelper.GetTimeAgo(post.CreatedAt)</div>
+                    <div class="newest-card-username fs-12 mx-2">@post.User.Username hỏi @GetTimeAgoHelper.GetTimeAgo(post.CreatedAt)</div>
                 </div>
             </div>
-            <hr class="mt-2">
+            <hr class="my-1">
         </div>
     }
 </div>
