--- a/K_Bridge/Views/Post/_RepliesPartial.cshtml
+++ b/K_Bridge/Views/Post/_RepliesPartial.cshtml
@@ -3,7 +3,7 @@
 @foreach (var reply in Model.Replies)
 {
     <div class="row my-3 m-0" style="border-bottom: 1px solid #8E6745">
-        <div class="col-lg-1 flex-column">
+        <div class="col-1 flex-column">
             <div id="reply-like-dislike-@reply.Reply.ID"
                  data-reply-id="@reply.Reply.ID"
                  data-like-status="@reply.UserLikeStatus"
@@ -21,7 +21,7 @@
             </div>
 
         </div>
-        <div class="col-lg-11">
+        <div class="col-11">
             <div class="d-flex justify-content-end">
                
                 @if (ViewBag.CurrentUser != null && reply.Reply.UserID == ViewBag.CurrentUser.ID)
@@ -37,7 +37,7 @@
         </div>
         <div class="d-flex justify-content-end mb-2">
             <img src="~/img/avatar_default.png" class="rounded-circle" alt="Avatar" width="30" height="30">
-            <div class="newest-card-username mx-2">@reply.Reply.User.Username trả lời @GetTimeAgoHelper.GetTimeAgo(reply.Reply.CreatedAt)</div>
+            <div class="newest-card-username fs-14 mx-2">@reply.Reply.User.Username trả lời @GetTimeAgoHelper.GetTimeAgo(reply.Reply.CreatedAt)</div>
         </div>
     </div>
 }
