--- a/K_Bridge/wwwroot/css/Newest.css
+++ b/K_Bridge/wwwroot/css/Newest.css
@@ -67,7 +67,6 @@
     opacity: 0.7;
     display: flex;
     align-items: center;
-    font-size: 15px;
 }
 
 #editor {
@@ -357,3 +356,21 @@
 .custom-select__trigger span {
     padding-right: 10px;
 }
+
+#sortFrame {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease-out, opacity 0.3s ease-out, padding 0.3s ease-out;
+    opacity: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    position: absolute;
+    top: 20px;
+    right: 0px;
+    z-index: 1000;
+}
+
+    #sortFrame.active {
+        max-height: 500px; /* Điều chỉnh giá trị này tùy thuộc vào chiều cao tối đa của nội dung */
+        opacity: 1;
+    }
