--- a/K_Bridge/Views/User/EditProfile.cshtml
+++ b/K_Bridge/Views/User/EditProfile.cshtml
@@ -11,12 +11,12 @@
 </div>
 <form id="profile-form" enctype="multipart/form-data">
     <div class="d-flex">
-        <div class="col-lg-6">
+        <div class="col-6">
             <div style="width: 90%;">
-                @*             <div class="mt-2 text-color-header fw-bold text-uppercase fs-12">tên hiển thị</div>
-                <input type="text" style="width:90%;" class="my-2 flex-grow-1 px-3 py-1 fs-6 text-color-logo rounded-8 focus bg-main-color-btn"
-                placeholder="Tên hiển thị..." value="test1">
-                *@
+                <div class="mt-2 text-color-header fw-bold text-uppercase fs-12">tên hiển thị</div>
+                <input id="content-display" type="text" style="width:90%;" class="my-2 flex-grow-1 px-3 py-1 fs-6 text-color-logo rounded-8 focus border-main-color-background"
+                       placeholder="Tên hiển thị..." value="@currentUser.Username">
+               
                 <div class="mt-2 text-color-header fw-bold text-uppercase fs-12">ảnh đại điện</div>
                 <label for="avatar-upload" style="width:90%; cursor:pointer;" class=" my-2  btn-account-log px-3 py-1 rounded-3">
                     <i class="bi bi-upload mx-3"></i> Chọn ảnh mới
@@ -30,10 +30,10 @@
 
             </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-6">
             <div class="text-color-header fw-bold text-uppercase fs-12">Giới thiệu về tôi</div>
             <textarea style="min-height:100%; min-width:98%;" name="NewBiography"
-                      class="my-2 m-2 p-3 fs-6 text-color-logo rounded-8 focus bg-main-color-btn" id="content-textarea"
+                      class="my-2 m-2 p-3 fs-6 text-color-logo rounded-8 focus border-main-color-background" id="content-textarea"
                       placeholder="Viết nội dung của bài viết tại đây...">@currentUser.Biography</textarea>
 
             <input asp-for="Biography" style="display:none" />
@@ -52,7 +52,7 @@
                     <div id="target-div" class="rounded-3 rounded-top" style="height: 100px; background-color: #8E6745;"></div>
                 }
                 <div class="d-flex position-relative">
-                    <div class="col-lg-3">
+                    <div class="col-3">
                         @if (currentUser.Avatar == null)
                         {
                             <img width="100" height="100"
@@ -69,7 +69,7 @@
                         }
                     </div>
                     <div class="mt-3">
-                        <p class="fs-5 text-color-logo">@currentUser.Username</p>
+                        <p class="fs-5">@currentUser.Username</p>
                     </div>
                 </div>
                 <div class="px-4 py-2">
@@ -111,7 +111,8 @@
     const colorInput = document.getElementById('exampleColorInput');
     const targetDiv = document.getElementById('target-div');
     const saveBtn = document.getElementById('save-btn');
-    const resetBtn = document.getElementById('reset-btn');
+    const resetBtn = document.getElementById('reset-btn'); 
+    const contentDisplay = document.getElementById('content-display')
 
     colorInput.addEventListener('input', () => {
         targetDiv.style.backgroundColor = colorInput.value;
